--- a/public/app_login/index.html
+++ b/public/app_login/index.html
@@ -25,6 +25,7 @@
     <button class=" btn btn-primary" id="btn_logout">Sair</button>
     <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#postModal">Novo Post</button>
 
+
     <!-- Modal para Criar Post -->
      <div class="infoUser">
         <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="postModalLabel" aria-hidden="true">
@@ -62,6 +63,39 @@
 
      </div>
 
+      <!-- Modal para comentario Post -->
+      <div class="infoUser">
+        <div class="modal fade" id="comentariomodal" tabindex="-1" role="dialog" aria-labelledby="postModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content bg-dark">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="comentario-form" class="form" method="post">
+                            <div class="infoUser">
+                                <div class="imgUser mb-3"></div>
+                                <strong id="nomeUsuario">, seja bem-vindo!</strong>
+                              </div>
+                            <div class="form-group">
+                            </div>
+                            <div class="form-group">
+                                <textarea class="escrev" name="textarea" placeholder="Vamos mudar o mundo?" id="txt_comentario" required></textarea>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                <button type="button" id="btn_comentar" class="btn btn-info">Salvar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+     </div>
+
     <!-- Tabela de Usuários -->
     <div class="container mt-4">
         <div class="row">
@@ -80,6 +114,7 @@
     <script>
         
        document.getElementById ('btn_salvar').addEventListener ('click', salvaPost);
+       document.getElementById ('btn_comentar').addEventListener ('click', salvacomentario);
     </script>
     
 </body>
